--- a/calculators/compounding.html
+++ b/calculators/compounding.html
@@ -45,9 +45,27 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/finplan'>Личный финансовый план — не нужен</a></li>
-                        <li><a href='/notes/bonds_in_portfolio#_5'>Облигации в инвестиционном портфеле/Для стабилизации пенсионных выплат</a></li>
-                        <li><a href='/literacy/reserves#_4'>Формирование резервов/Пенсионные сбережения и страхование жизни</a></li>
+                        <li><a href='/notes/finplan'>Личный финансовый план — не нужен</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Личный финансовый план — не нужен</span>
+        <span class='description'>Составление личного финансового плана ничего не даёт кроме потери сил и времени (а иногда и денег, если вы ради него пошли к консультанту). Правильный подход — организовать свою финансовую систему так, чтобы она всегда и автоматически отражала ваши планы.</span>
+    </span></li>
+                        <li><a href='/notes/bonds_in_portfolio#_5'>Облигации в инвестиционном портфеле/Для стабилизации пенсионных выплат</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле/Для стабилизации пенсионных выплат</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/reserves#_4'>Формирование резервов/Пенсионные сбережения и страхование жизни</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Формирование резервов/Пенсионные сбережения и страхование жизни</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
