--- a/calculators/etf_taxation.html
+++ b/calculators/etf_taxation.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/calculators/etf_us_eu_ru'>Расчёт эффективности инвестиций через американские, европейские и российские ETF</a></li>
+                        <li><a href='/calculators/etf_us_eu_ru'>Расчёт эффективности инвестиций через американские, европейские и российские ETF</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Расчёт эффективности инвестиций через американские, европейские и российские ETF</span>
+        <span class='description'>Расчёт итоговой суммы капитала при инвестициях через американские, европейские и российские биржевые фонды</span>
+    </span></li>
             </ul>
         </details>
 </div>
