--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -51,8 +51,20 @@
         </div><details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/howto#_6'>Пенсия своими силами. Пошаговое руководство/Осваиваем фондовый рынок</a></li>
-                        <li><a href='/calculators/etf_us_eu_ru'>Расчёт эффективности инвестиций через американские, европейские и российские ETF</a></li>
+                        <li><a href='/literacy/howto#_6'>Пенсия своими силами. Пошаговое руководство/Осваиваем фондовый рынок</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Пенсия своими силами. Пошаговое руководство/Осваиваем фондовый рынок</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/calculators/etf_us_eu_ru'>Расчёт эффективности инвестиций через американские, европейские и российские ETF</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Расчёт эффективности инвестиций через американские, европейские и российские ETF</span>
+        <span class='description'>Расчёт итоговой суммы капитала при инвестициях через американские, европейские и российские биржевые фонды</span>
+    </span></li>
             </ul>
         </details></div>
 <p>Необходимость посредника для выхода на биржу — это анахронизм, но нам с ним некоторое время ещё жить. Выбираем правильного брокера.</p>
