--- a/literacy/cards.html
+++ b/literacy/cards.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cardscalc'>Использование и расчёт банковских карт</a></li>
+                        <li><a href='/literacy/cardscalc'>Использование и расчёт банковских карт</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Использование и расчёт банковских карт</span>
+        <span class='description'>Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -126,7 +132,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cardscalc#_6'>Использование и расчёт банковских карт/Подбор и расчёт кредитных карт</a></li>
+                        <li><a href='/literacy/cardscalc#_6'>Использование и расчёт банковских карт/Подбор и расчёт кредитных карт</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Использование и расчёт банковских карт/Подбор и расчёт кредитных карт</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
