--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -45,8 +45,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cards#credit'>Банковские карты/Кредитные карты</a></li>
-                        <li><a href='/literacy/credits'>Математика кредитов</a></li>
+                        <li><a href='/literacy/cards#credit'>Банковские карты/Кредитные карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты/Кредитные карты</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/credits'>Математика кредитов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Математика кредитов</span>
+        <span class='description'>Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?</span>
+    </span></li>
             </ul>
         </details>
 </div>
