--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -46,7 +46,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/howto#_3'>Пенсия своими силами. Пошаговое руководство/Воплощаем</a></li>
+                        <li><a href='/literacy/howto#_3'>Пенсия своими силами. Пошаговое руководство/Воплощаем</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Пенсия своими силами. Пошаговое руководство/Воплощаем</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
