--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -46,10 +46,34 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cards'>Банковские карты</a></li>
-                        <li><a href='/literacy/instruments/deposits2'>Банковские счета, карты и вклады</a></li>
-                        <li><a href='/literacy/basebank'>Выбор базового банка</a></li>
-                        <li><a href='/literacy/moneytransfer'>Денежные переводы</a></li>
+                        <li><a href='/literacy/cards'>Банковские карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты</span>
+        <span class='description'>Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</span>
+    </span></li>
+                        <li><a href='/literacy/instruments/deposits2'>Банковские счета, карты и вклады</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские счета, карты и вклады</span>
+        <span class='description'>Риски и доходность банковских вкладов</span>
+    </span></li>
+                        <li><a href='/literacy/basebank'>Выбор базового банка</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Выбор базового банка</span>
+        <span class='description'>В чём роль и важность базового банка? Как его правильно выбирать?</span>
+    </span></li>
+                        <li><a href='/literacy/moneytransfer'>Денежные переводы</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Денежные переводы</span>
+        <span class='description'>Как правильно переводить деньги. Какие здесь есть возможности, риски и подводные камни. Как избежать обвинений в обналичке, транзите и отмывании.</span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -73,9 +97,27 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cards'>Банковские карты</a></li>
-                        <li><a href='/literacy/cards#debit'>Банковские карты/Дебетовые карты</a></li>
-                        <li><a href='/literacy/cardscalc#_5'>Использование и расчёт банковских карт/Подбор и расчёт дебетовых карт</a></li>
+                        <li><a href='/literacy/cards'>Банковские карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты</span>
+        <span class='description'>Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</span>
+    </span></li>
+                        <li><a href='/literacy/cards#debit'>Банковские карты/Дебетовые карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты/Дебетовые карты</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/cardscalc#_5'>Использование и расчёт банковских карт/Подбор и расчёт дебетовых карт</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Использование и расчёт банковских карт/Подбор и расчёт дебетовых карт</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
