--- a/literacy/exchange.html
+++ b/literacy/exchange.html
@@ -45,8 +45,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/taxes'>Брокерский счёт: как рассчитываются и уплачиваются налоги</a></li>
-                        <li><a href='/literacy/brokers'>Как выбрать брокера</a></li>
+                        <li><a href='/literacy/taxes'>Брокерский счёт: как рассчитываются и уплачиваются налоги</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Брокерский счёт: как рассчитываются и уплачиваются налоги</span>
+        <span class='description'>Как рассчитываются и уплачиваются налоги по операциям на брокерском счёте. В каких случаях нужно рассчитывать налог самостоятельно. Когда нужно подавать декларацию и платить налог.</span>
+    </span></li>
+                        <li><a href='/literacy/brokers'>Как выбрать брокера</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Как выбрать брокера</span>
+        <span class='description'>На что смотреть и на что не смотреть при выборе брокера. Основные виды комиссий брокеров. Сравнение комиссий  брокеров.</span>
+    </span></li>
             </ul>
         </details>
 </div>
