--- a/literacy/instruments.html
+++ b/literacy/instruments.html
@@ -149,7 +149,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/marketprice'>Откуда берётся рыночная цена и доходность акций</a></li>
+                        <li><a href='/notes/marketprice'>Откуда берётся рыночная цена и доходность акций</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Откуда берётся рыночная цена и доходность акций</span>
+        <span class='description'>Какие факторы обеспечивали рост фондового рынка в прошлом и какие будут обеспечивать его рост в будущем. Что игнорируют как активные инвесторы, так и их противники. Почему доходность фондового рынка должна быть нулевой, и почему она такой не будет. Почему нет смысла выбирать отдельные акции для повышения доходности портфеля.</span>
+    </span></li>
             </ul>
         </details>
 </div>
