--- a/literacy/instruments/cash.html
+++ b/literacy/instruments/cash.html
@@ -49,7 +49,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/deposits2'>Банковские счета, карты и вклады</a></li>
+                        <li><a href='/literacy/instruments/deposits2'>Банковские счета, карты и вклады</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские счета, карты и вклады</span>
+        <span class='description'>Риски и доходность банковских вкладов</span>
+    </span></li>
             </ul>
         </details>
 </div>
