--- a/literacy/instruments/crypto.html
+++ b/literacy/instruments/crypto.html
@@ -49,8 +49,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/inflation#regulation'>Инфляция/Управление инфляцией</a></li>
-                        <li><a href='/notes/digital_currencies#_2'>Цифровые валюты центральных банков/Введение</a></li>
+                        <li><a href='/notes/inflation#regulation'>Инфляция/Управление инфляцией</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Инфляция/Управление инфляцией</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/digital_currencies#_2'>Цифровые валюты центральных банков/Введение</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Цифровые валюты центральных банков/Введение</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
