--- a/literacy/instruments/deposits2.html
+++ b/literacy/instruments/deposits2.html
@@ -49,9 +49,27 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/realty'>Недвижимость</a></li>
-                        <li><a href='/literacy/instruments/bonds'>Облигации</a></li>
-                        <li><a href='/notes/bonds_in_portfolio#_3'>Облигации в инвестиционном портфеле/Для ограничения рисков портфеля</a></li>
+                        <li><a href='/literacy/instruments/realty'>Недвижимость</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Недвижимость</span>
+        <span class='description'>Вложения в недвижимость — какова реальная доходность и риски.</span>
+    </span></li>
+                        <li><a href='/literacy/instruments/bonds'>Облигации</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации</span>
+        <span class='description'>Специфика, риски и доходность облигаций.</span>
+    </span></li>
+                        <li><a href='/notes/bonds_in_portfolio#_3'>Облигации в инвестиционном портфеле/Для ограничения рисков портфеля</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле/Для ограничения рисков портфеля</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
