--- a/literacy/instruments/gold.html
+++ b/literacy/instruments/gold.html
@@ -55,9 +55,27 @@
         </div><details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/myportfolio#_9'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Обсуждение</a></li>
-                        <li><a href='/notes/holywars'>О спорных терминах</a></li>
-                        <li><a href='/notes/bonds_in_portfolio#_4'>Облигации в инвестиционном портфеле/Для извлечения дополнительной доходности во время кризисов</a></li>
+                        <li><a href='/notes/myportfolio#_9'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Обсуждение</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Обсуждение</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/holywars'>О спорных терминах</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>О спорных терминах</span>
+        <span class='description'>Бегло прошёлся по любимым темам холиваров в инвестиционных чатиках и форумах, касающихся бессмысленных споров о терминологии</span>
+    </span></li>
+                        <li><a href='/notes/bonds_in_portfolio#_4'>Облигации в инвестиционном портфеле/Для извлечения дополнительной доходности во время кризисов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле/Для извлечения дополнительной доходности во время кризисов</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details></div>
 <div><ul>
