--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -50,8 +50,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/stocks'>Акции</a></li>
-                        <li><a href='/literacy/instruments/gold'>Золото</a></li>
+                        <li><a href='/literacy/instruments/stocks'>Акции</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Акции</span>
+        <span class='description'>Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки.</span>
+    </span></li>
+                        <li><a href='/literacy/instruments/gold'>Золото</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Золото</span>
+        <span class='description'>Виды, специфика, риски и доходность вложений в золото. Место золота в инвестиционном портфеле. Альтернативы золоту.</span>
+    </span></li>
             </ul>
         </details>
 </div>
