--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -45,8 +45,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/notaboutmoney'>Бережливость — это не про деньги</a></li>
-                        <li><a href='/notes/lifeprofile'>Финансовый профиль жизни обычного человека и инвестора</a></li>
+                        <li><a href='/literacy/notaboutmoney'>Бережливость — это не про деньги</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Бережливость — это не про деньги</span>
+        <span class='description'>Какие виды капитала есть у человека и зачем их накапливать. Философия экономии и сбережений. Куда вкладывать сбережения? Необходимость баланса между видами капитала.</span>
+    </span></li>
+                        <li><a href='/notes/lifeprofile'>Финансовый профиль жизни обычного человека и инвестора</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Финансовый профиль жизни обычного человека и инвестора</span>
+        <span class='description'>Как будут изменяться в течение жизни доходы, расходы и капитал если делать сбережения и если их не делать.</span>
+    </span></li>
             </ul>
         </details>
 </div>
