--- a/literacy/moneytransfer.html
+++ b/literacy/moneytransfer.html
@@ -45,10 +45,34 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cards'>Банковские карты</a></li>
-                        <li><a href='/literacy/cards#credit'>Банковские карты/Кредитные карты</a></li>
-                        <li><a href='/literacy/basebank'>Выбор базового банка</a></li>
-                        <li><a href='/literacy/howto#_5'>Пенсия своими силами. Пошаговое руководство/Распределяем выгодно</a></li>
+                        <li><a href='/literacy/cards'>Банковские карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты</span>
+        <span class='description'>Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</span>
+    </span></li>
+                        <li><a href='/literacy/cards#credit'>Банковские карты/Кредитные карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты/Кредитные карты</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/basebank'>Выбор базового банка</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Выбор базового банка</span>
+        <span class='description'>В чём роль и важность базового банка? Как его правильно выбирать?</span>
+    </span></li>
+                        <li><a href='/literacy/howto#_5'>Пенсия своими силами. Пошаговое руководство/Распределяем выгодно</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Пенсия своими силами. Пошаговое руководство/Распределяем выгодно</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -114,9 +138,27 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cards'>Банковские карты</a></li>
-                        <li><a href='/literacy/cards#_2'>Банковские карты/Общие представления</a></li>
-                        <li><a href='/literacy/deposits#cards'>Размещение средств в банках/Дебетовые карты</a></li>
+                        <li><a href='/literacy/cards'>Банковские карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты</span>
+        <span class='description'>Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</span>
+    </span></li>
+                        <li><a href='/literacy/cards#_2'>Банковские карты/Общие представления</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Банковские карты/Общие представления</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/deposits#cards'>Размещение средств в банках/Дебетовые карты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Размещение средств в банках/Дебетовые карты</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -170,7 +212,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/basebank'>Выбор базового банка</a></li>
+                        <li><a href='/literacy/basebank'>Выбор базового банка</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Выбор базового банка</span>
+        <span class='description'>В чём роль и важность базового банка? Как его правильно выбирать?</span>
+    </span></li>
             </ul>
         </details>
 </div>
