--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -51,8 +51,20 @@
         </div><details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/iis'>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</a></li>
-                        <li><a href='/literacy/instruments/bonds#_4'>Облигации/Особенности облигаций</a></li>
+                        <li><a href='/literacy/iis'>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</span>
+        <span class='description'>Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</span>
+    </span></li>
+                        <li><a href='/literacy/instruments/bonds#_4'>Облигации/Особенности облигаций</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации/Особенности облигаций</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details></div>
 <p>Здесь я постарался систематизировать только базовую информацию, которая может быть интересна обычному человеку. Если вас занесло на внебиржевой или срочный рынок, вы уже профессионал, и самостоятельно разберётесь и с налоговым кодексом, и со своим брокером, и со своим налоговым инспектором.</p>
