--- a/literacy/yield/index.html
+++ b/literacy/yield/index.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/erratic_returns'>Контринтуитивная доходность</a></li>
+                        <li><a href='/literacy/erratic_returns'>Контринтуитивная доходность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Контринтуитивная доходность</span>
+        <span class='description'>Для доходностей финансовых инструментов характерны толстые хвосты и асимметрия, а сам процесс инвестирования — неэргодичен. Наша интуиция в таких условиях работает плохо, и мы можем существенно недооценивать риски выбранных активов и стратегий.</span>
+    </span></li>
             </ul>
         </details>
 </div>
