--- a/literacy/zero_sum.html
+++ b/literacy/zero_sum.html
@@ -74,8 +74,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/fund_selection#_2'>Выбор индексных фондов/Базовый индекс, бенчмарк и активные фонды</a></li>
-                        <li><a href='/notes/holywars'>О спорных терминах</a></li>
+                        <li><a href='/literacy/fund_selection#_2'>Выбор индексных фондов/Базовый индекс, бенчмарк и активные фонды</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Выбор индексных фондов/Базовый индекс, бенчмарк и активные фонды</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/holywars'>О спорных терминах</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>О спорных терминах</span>
+        <span class='description'>Бегло прошёлся по любимым темам холиваров в инвестиционных чатиках и форумах, касающихся бессмысленных споров о терминологии</span>
+    </span></li>
             </ul>
         </details>
 </div>
