--- a/notes/active_investing.html
+++ b/notes/active_investing.html
@@ -46,6 +46,55 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<div class="procontra">
+            <span class='pro'>pro</span> &amp; <span class='contra'>contra</span>
+            <ul class='pro'>
+            </ul>
+            <ul class='contra'>
+                    <li><a href='/notes/markettiming'>Выбор времени для покупки акций</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Выбор времени для покупки акций</span>
+        <span class='description'>Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит.</span>
+    </span></li>
+                    <li><a href='/literacy/erratic_returns#non-stat'>Контринтуитивная доходность/Нестационарность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Контринтуитивная доходность/Нестационарность</span>
+        <span class='description'></span>
+    </span></li>
+                    <li><a href='/literacy/erratic_returns#non-ergo'>Контринтуитивная доходность/Неэргодичность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Контринтуитивная доходность/Неэргодичность</span>
+        <span class='description'></span>
+    </span></li>
+                    <li><a href='/notes/trading'>Легион хаотичных трейдеров</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Легион хаотичных трейдеров</span>
+        <span class='description'>С помощью очень простой модели оценим, какой процент трейдеров может добиться выдающихся результатов абсолютно случайно. Большой.</span>
+    </span></li>
+                    <li><a href='/notes/active_results'>Результаты активного управления</a>    <button class='link-meta-anchor'>
+            <i class="share">&#xe901;</i>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Результаты активного управления</span>
+        <span class='description'>Список источников по результатам активного управления с краткими выписками и комментариями.</span>
+    </span></li>
+                    <li><a href='/literacy/zero_sum'>Рынок как игра с нулевой суммой</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Рынок как игра с нулевой суммой</span>
+        <span class='description'>Почему активные инвесторы и спекулянты отбирают деньги друг у друга, а пассивных невозможно победить</span>
+    </span></li>
+            </ul>
+        </div>
 </div>
 <section id="_2">
 <h2><a href="/notes/active_investing#_2">Ссылки по теме</a></h2>
@@ -74,7 +123,7 @@
 <ul>
 <li>Случайность. В семье бывает и пять мальчиков, у управляющего бывают случайно цепочки удачных операций. Вероятность 5 лет случайно угадывать рынок – 1/32. Шестой – ½.</li>
 <li>&nbsp;
-<span class='hl' id='O170Y4UH0Go' markdown=1><i class='share'><a href='/notes/active_investing#O170Y4UH0Go'>&#xe902;</a></i>Корреляция портфеля с длинным восходящим трендом рыночного актива или их комбинации. Эту корреляцию не всегда можно сходу увидеть. Например, отличные результаты показал бы в 2013 – 2016 годах фонд, скоррелированный с комбинацией длинного DJ и короткой нефти, причем даже в 2016 году при определенной комбинации показал бы ровный рост. Но просто наложить его на нефть или S&amp;P не удалось бы. Это особенно опасная штука – далеко не все управляющие могут отрефлексировать факт такой корреляции и честно верят, что придумали вечный двигатель, тогда как на самом деле их алгоритм просто «long (short) biased» к какой-то комбинации активов.
+<span class='hl' id='MnLKeY4tKMg' markdown=1><i class='share'><a href='/notes/active_investing#MnLKeY4tKMg'>&#xe902;</a></i>Корреляция портфеля с длинным восходящим трендом рыночного актива или их комбинации. Эту корреляцию не всегда можно сходу увидеть. Например, отличные результаты показал бы в 2013 – 2016 годах фонд, скоррелированный с комбинацией длинного DJ и короткой нефти, причем даже в 2016 году при определенной комбинации показал бы ровный рост. Но просто наложить его на нефть или S&amp;P не удалось бы. Это особенно опасная штука – далеко не все управляющие могут отрефлексировать факт такой корреляции и честно верят, что придумали вечный двигатель, тогда как на самом деле их алгоритм просто «long (short) biased» к какой-то комбинации активов.
 </span></li>
 </ul>
 </blockquote>
