--- a/notes/active_results/index.html
+++ b/notes/active_results/index.html
@@ -34,9 +34,9 @@
                     <p> Опубликовано: <time>2021-11-29</time> </p>
 <p>Находится в:</p>
                     <ul>
-    <a href='/notes#portfolio'>Заметки о финансах/Инвестиционный портфель</a>
-
     <a href='/pages/sources'>Источники</a>
+
+    <a href='/notes#portfolio'>Заметки о финансах/Инвестиционный портфель</a>
 
     </ul>
 
@@ -47,8 +47,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/active_investing'>Активные инвестиции</a></li>
-                        <li><a href='/literacy/erratic_returns#non-ergo'>Контринтуитивная доходность/Неэргодичность</a></li>
+                        <li><a href='/notes/active_investing'>Активные инвестиции</a>    <button class='link-meta-anchor'>
+            <i class="share">&#xe901;</i>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Активные инвестиции</span>
+        <span class='description'>Некоторые заметки по проблемам и возможностям активного инвестирования, нигде более не записанные</span>
+    </span></li>
+                        <li><a href='/literacy/erratic_returns#non-ergo'>Контринтуитивная доходность/Неэргодичность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Контринтуитивная доходность/Неэргодичность</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -114,8 +126,8 @@
                         </ul>
                     </div>
                     <div class="up">
-                        <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
                         <span> &uarr; <a href='/pages/sources'> Источники</a> &uarr; </span>
+                        <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
