--- a/notes/capital.html
+++ b/notes/capital.html
@@ -45,8 +45,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/recklessness'>Безответственное отношение к деньгам</a></li>
-                        <li><a href='/notes/fallacies#_4'>Порочные идеи/Нет смысла инвестировать мелкие суммы</a></li>
+                        <li><a href='/notes/recklessness'>Безответственное отношение к деньгам</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Безответственное отношение к деньгам</span>
+        <span class='description'>«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</span>
+    </span></li>
+                        <li><a href='/notes/fallacies#_4'>Порочные идеи/Нет смысла инвестировать мелкие суммы</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Порочные идеи/Нет смысла инвестировать мелкие суммы</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
