--- a/notes/contributions/index.html
+++ b/notes/contributions/index.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/diversification_math'>Математика диверсификации: портфельный эффект и ребалансировка между акциями</a></li>
+                        <li><a href='/notes/diversification_math'>Математика диверсификации: портфельный эффект и ребалансировка между акциями</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Математика диверсификации: портфельный эффект и ребалансировка между акциями</span>
+        <span class='description'>Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки</span>
+    </span></li>
             </ul>
         </details>
 </div>
