--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/diversification_math2'>Математика диверсификации-2: доходность и риск</a></li>
+                        <li><a href='/notes/diversification_math2'>Математика диверсификации-2: доходность и риск</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Математика диверсификации-2: доходность и риск</span>
+        <span class='description'>Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</span>
+    </span></li>
             </ul>
         </details>
 </div>
