--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -45,13 +45,55 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/mpt'>(Не)Математика диверсификации-3: современная теория портфеля</a></li>
-                        <li><a href='/literacy/returns#_3'>Анатомия доходности/Неоднозначность ожидаемой доходности</a></li>
-                        <li><a href='/literacy/instruments/gold#_2'>Золото/Производство, потребление и историческая динамика</a></li>
-                        <li><a href='/notes/myportfolio#_9'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Обсуждение</a></li>
-                        <li><a href='/notes/bonds_in_portfolio'>Облигации в инвестиционном портфеле</a></li>
-                        <li><a href='/notes/bonds_in_portfolio#_2'>Облигации в инвестиционном портфеле/Для накопления на определённую финансовую цель</a></li>
-                        <li><a href='/notes/bonds_in_portfolio#_3'>Облигации в инвестиционном портфеле/Для ограничения рисков портфеля</a></li>
+                        <li><a href='/notes/mpt'>(Не)Математика диверсификации-3: современная теория портфеля</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>(Не)Математика диверсификации-3: современная теория портфеля</span>
+        <span class='description'>Теория портфеля Гарри Марковица, и почему это лишь математическая иллюстрация. Принципы построения портфеля гораздо проще.</span>
+    </span></li>
+                        <li><a href='/literacy/returns#_3'>Анатомия доходности/Неоднозначность ожидаемой доходности</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Анатомия доходности/Неоднозначность ожидаемой доходности</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/instruments/gold#_2'>Золото/Производство, потребление и историческая динамика</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Золото/Производство, потребление и историческая динамика</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/myportfolio#_9'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Обсуждение</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Обсуждение</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/bonds_in_portfolio'>Облигации в инвестиционном портфеле</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле</span>
+        <span class='description'>Рассматриваем различные роли облигаций в инвестиционном портфеле. Для каждой роли — свои облигации.</span>
+    </span></li>
+                        <li><a href='/notes/bonds_in_portfolio#_2'>Облигации в инвестиционном портфеле/Для накопления на определённую финансовую цель</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле/Для накопления на определённую финансовую цель</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/bonds_in_portfolio#_3'>Облигации в инвестиционном портфеле/Для ограничения рисков портфеля</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле/Для ограничения рисков портфеля</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
