--- a/notes/expo/index.html
+++ b/notes/expo/index.html
@@ -42,6 +42,25 @@
             </header>
             <div class="content">                <section id="">
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/paingain'>Болезненность и полезность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Болезненность и полезность</span>
+        <span class='description'>Определяем оптимальную экспозицию на актив/портфель с помощью функции полезности (и «функции болезненности»). Это нам впоследствии поможет и при составлении оптимальных портфелей.</span>
+    </span></li>
+                        <li><a href='/notes/paingain#_2'>Болезненность и полезность/Полезность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Болезненность и полезность/Полезность</span>
+        <span class='description'></span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>Пусть у нас есть некоторый портфель/актив/фактор А и безрисковый актив — кэш. Долю А в суммарном портфеле инвестора будем называть <em>экспозицией</em>.</p>
 <p>Вопрос — как изменяется риск/доходность суммарного портфеля (кэш + А), при изменении экспозиции на А? Предполагаем, что и доходность кэша, и стоимость заимствования равны безрисковой ставке, которая нулевая.</p>
@@ -59,7 +78,9 @@
 <img src="/notes/expo/expo_g.svg"></img>
 <img src="/notes/expo/expo_p.svg"></img></p>
 <p>Как видно, с ростом экспозиции выше 100% доходность растёт заметно медленнее, чем предполагает классическая теория, а волатильность — заметно быстрее. И падает тоже медленнее, при снижении экспозиции ниже 100%. Соотношение доходность/риск не остаётся постоянным, а практически равномерно падает с ростом экспозиции. Также надо заметить, что масштабируемость актива мало зависит от его волатильности: что СКО доходностей, что волатильность капитала у акций и золота практически одинаковы, однако экспозиция на золото масштабировалась гораздо лучше.</p>
-<p>Отчёго так получается? Всё тот же портфельный эффект, в своём химически-чистом, «одностороннем», виде. При экспозиции на актив меньше 100% вы имеете запас кэша, который пополняете на разгонах, и из которого закупаетесь на просадках. Это создаёт дополнительную доходность (не компенсируя падения доходности от недоэкспозиции, но тем не менее). При экспозиции выше 100% вы вынуждены разворачивать стратегию: продавать актив на просадках, чтобы снизить плечо, и покупать на разгонах. Покупаете дорого, продаёте дёшево ⇒ теряете доходность, а трендовость дополнительно увеличивает риск. Именно так большое плечо убивает портфель, даже если оно само по себе бесплатное.</p>
+<p>Отчёго так получается? Всё тот же портфельный эффект, в своём химически-чистом, «одностороннем», виде. При экспозиции на актив меньше 100% вы имеете запас кэша, который пополняете на разгонах, и из которого закупаетесь на просадках. Это создаёт дополнительную доходность (не компенсируя падения доходности от недоэкспозиции, но тем не менее).
+<span class='hl' id='0VboLyLoesY' markdown=1><i class='share'><a href='/notes/expo#0VboLyLoesY'>&#xe902;</a></i>При экспозиции выше 100% вы вынуждены разворачивать стратегию: продавать актив на просадках, чтобы снизить плечо, и покупать на разгонах. Покупаете дорого, продаёте дёшево ⇒ теряете доходность, а трендовость дополнительно увеличивает риск. Именно так большое плечо убивает портфель, даже если оно само по себе бесплатное.
+</span></p>
 <p>Какие ещё интересные выводы из этого следуют?</p>
 <ol>
 <li>Существует оптимальная экспозиция на рисковые активы / портфель, но её нельзя найти по соотношению риск/доходность т.к. оно сведёт экспозицию в ноль.</li>
@@ -71,6 +92,13 @@
             <div class="meta"><div class=categories>
                     Категории:<a href="/categories/portfolio">Портфель</a>
 <a href="/categories/risk">Риск</a>
+                    </div>
+                    <div>
+                        <p>Читайте далее</p>
+                        <ul>
+                                <li><a href='/notes/paingain'>Болезненность и полезность</a></li>
+                                <li><a href='/notes/paingain#_2'>Болезненность и полезность/Полезность</a></li>
+                        </ul>
                     </div>
                     <div class="up">
                         <span> &uarr; <a href='/notes#portfolio'> Заметки о финансах/Инвестиционный портфель</a> &uarr; </span>
