--- a/notes/fallacies.html
+++ b/notes/fallacies.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/howto'>Пенсия своими силами. Пошаговое руководство</a></li>
+                        <li><a href='/literacy/howto'>Пенсия своими силами. Пошаговое руководство</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Пенсия своими силами. Пошаговое руководство</span>
+        <span class='description'>Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции.</span>
+    </span></li>
             </ul>
         </details>
 </div>
