--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -46,9 +46,27 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/returns#_2'>Анатомия доходности/Доходность</a></li>
-                        <li><a href='/notes/digital_currencies'>Цифровые валюты центральных банков</a></li>
-                        <li><a href='/notes/digital_currencies#_8'>Цифровые валюты центральных банков/Безналичные деньги и их проблемы/Проблемы макроэкономического регулирования</a></li>
+                        <li><a href='/literacy/returns#_2'>Анатомия доходности/Доходность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Анатомия доходности/Доходность</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/digital_currencies'>Цифровые валюты центральных банков</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Цифровые валюты центральных банков</span>
+        <span class='description'>Центробанки практически всех экономически развитых стран занялись исследованиями в области «цифровых валют». Какие задачи они хотят решить с их помощью, и чем нам всем это грозит?</span>
+    </span></li>
+                        <li><a href='/notes/digital_currencies#_8'>Цифровые валюты центральных банков/Безналичные деньги и их проблемы/Проблемы макроэкономического регулирования</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Цифровые валюты центральных банков/Безналичные деньги и их проблемы/Проблемы макроэкономического регулирования</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -145,7 +163,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/crypto#_3'>Криптовалюты/Криптовалюты как валюты</a></li>
+                        <li><a href='/literacy/instruments/crypto#_3'>Криптовалюты/Криптовалюты как валюты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Криптовалюты/Криптовалюты как валюты</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
