--- a/notes/markettiming/index.html
+++ b/notes/markettiming/index.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/stocks#_7'>Акции/Как выбирать время покупки акций</a></li>
+                        <li><a href='/literacy/instruments/stocks#_7'>Акции/Как выбирать время покупки акций</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Акции/Как выбирать время покупки акций</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
