--- a/notes/mpt/index.html
+++ b/notes/mpt/index.html
@@ -45,12 +45,55 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/volatility2'>Измеряя рыночный риск</a></li>
-                        <li><a href='/notes/volatility2#_2'>Измеряя рыночный риск/Классическая волатильность — СКО доходностей</a></li>
-                        <li><a href='/notes/factors'>Инвестиционные факторы</a></li>
-                        <li><a href='/notes/factors#_2'>Инвестиционные факторы/Историческая справка: CAPM, альфа, бета, и факторы</a></li>
-                        <li><a href='/literacy/instruments/crypto#_5'>Криптовалюты/Криптовалюты как актив</a></li>
-                        <li><a href='/notes/holywars'>О спорных терминах</a></li>
+                        <li><a href='/notes/paingain#45n4wOadUls'>Болезненность и полезность/Болезненность/</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Болезненность и полезность/Болезненность/</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/volatility2'>Измеряя рыночный риск</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Измеряя рыночный риск</span>
+        <span class='description'>Проанализировал целых 10 возможных мер рыночного риска, и собрал их в 3 основных его аспекта, которые должны учитываться при определении терпимости к риску и построении оптимального портфеля.</span>
+    </span></li>
+                        <li><a href='/notes/volatility2#_2'>Измеряя рыночный риск/Классическая волатильность — СКО доходностей</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Измеряя рыночный риск/Классическая волатильность — СКО доходностей</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/factors'>Инвестиционные факторы</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Инвестиционные факторы</span>
+        <span class='description'>Разбираемся с последней модой в области пассивных инвестиций: инвестиционными факторами и smart-beta фондами. Как выясняется, смысла в этом довольно мало.</span>
+    </span></li>
+                        <li><a href='/notes/factors#_2'>Инвестиционные факторы/Историческая справка: CAPM, альфа, бета, и факторы</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Инвестиционные факторы/Историческая справка: CAPM, альфа, бета, и факторы</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/instruments/crypto#_5'>Криптовалюты/Криптовалюты как актив</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Криптовалюты/Криптовалюты как актив</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/holywars'>О спорных терминах</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>О спорных терминах</span>
+        <span class='description'>Бегло прошёлся по любимым темам холиваров в инвестиционных чатиках и форумах, касающихся бессмысленных споров о терминологии</span>
+    </span></li>
             </ul>
         </details>
 </div>
