--- a/notes/myportfolio.html
+++ b/notes/myportfolio.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/blog/2021-01-01#_2'>Итоги 2020-го/Динамика и доходность портфеля</a></li>
+                        <li><a href='/blog/2021-01-01#_2'>Итоги 2020-го/Динамика и доходность портфеля</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Итоги 2020-го/Динамика и доходность портфеля</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
