--- a/notes/piketti.html
+++ b/notes/piketti.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/piketti2'>Социальное неравенство и налоги</a></li>
+                        <li><a href='/notes/piketti2'>Социальное неравенство и налоги</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Социальное неравенство и налоги</span>
+        <span class='description'>Социальное неравенство достаточно хорошо объясняется просто случайными флуктуациями в уровне дохода, которые, в отсутствие перераспределения, приводят к сосредоточению всех благ в руках нескольких человек. Прогрессивная налоговая шкала  эффективнее плоской в том смысле, что приводит к меньшему перераспределению благ через государство для обеспечения того же уровня неравенства.</span>
+    </span></li>
             </ul>
         </details>
 </div>
