--- a/notes/rebalance_bonus/index.html
+++ b/notes/rebalance_bonus/index.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/grimace'>Портфельный эффект и гримасы корреляции</a></li>
+                        <li><a href='/notes/grimace'>Портфельный эффект и гримасы корреляции</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Портфельный эффект и гримасы корреляции</span>
+        <span class='description'>Почему не стоит полагаться на корреляции при выборе активов в портфель. И на доходности тоже.</span>
+    </span></li>
             </ul>
         </details>
 </div>
