--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/fallacies'>Порочные идеи</a></li>
+                        <li><a href='/notes/fallacies'>Порочные идеи</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Порочные идеи</span>
+        <span class='description'>Широко укоренившиеся порочные идеи, мешающие людям устраивать своё финансовое благополучие, пока это ещё не поздно</span>
+    </span></li>
             </ul>
         </details>
 </div>
