--- a/notes/system.html
+++ b/notes/system.html
@@ -45,9 +45,27 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/blog/2021-01-01#_4'>Итоги 2020-го/Изменения в организации личных финансов</a></li>
-                        <li><a href='/notes/accounting#_2'>Как и зачем я веду учёт личных финансов/Причины</a></li>
-                        <li><a href='/notes/myportfolio#_8'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Распределение между брокерами</a></li>
+                        <li><a href='/blog/2021-01-01#_4'>Итоги 2020-го/Изменения в организации личных финансов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Итоги 2020-го/Изменения в организации личных финансов</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/accounting#_2'>Как и зачем я веду учёт личных финансов/Причины</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Как и зачем я веду учёт личных финансов/Причины</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/myportfolio#_8'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Распределение между брокерами</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Мой портфель ценных бумаг и стратегия использования брокерских счетов/Распределение между брокерами</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
