--- a/notes/volatility2/index.html
+++ b/notes/volatility2/index.html
@@ -45,8 +45,34 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/grimace'>Портфельный эффект и гримасы корреляции</a></li>
-                        <li><a href='/notes/expo'>Экспозиция и риск/доходность</a></li>
+                        <li><a href='/notes/paingain'>Болезненность и полезность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Болезненность и полезность</span>
+        <span class='description'>Определяем оптимальную экспозицию на актив/портфель с помощью функции полезности (и «функции болезненности»). Это нам впоследствии поможет и при составлении оптимальных портфелей.</span>
+    </span></li>
+                        <li><a href='/notes/paingain#_3'>Болезненность и полезность/Болезненность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Болезненность и полезность/Болезненность</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/grimace'>Портфельный эффект и гримасы корреляции</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Портфельный эффект и гримасы корреляции</span>
+        <span class='description'>Почему не стоит полагаться на корреляции при выборе активов в портфель. И на доходности тоже.</span>
+    </span></li>
+                        <li><a href='/notes/expo'>Экспозиция и риск/доходность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Экспозиция и риск/доходность</span>
+        <span class='description'>Небольшая зарисовка о неочевидных особенностях масштабирования портфелей</span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -277,6 +303,8 @@ c-4-3.333-8.333-7.667-13 -13l-13-13l77-155 77-156c66 199.333 139 419.667
                     <div>
                         <p>Читайте далее</p>
                         <ul>
+                                <li><a href='/notes/paingain#_3'>Болезненность и полезность/Болезненность</a></li>
+                                <li><a href='/notes/paingain'>Болезненность и полезность</a></li>
                                 <li><a href='/notes/grimace'>Портфельный эффект и гримасы корреляции</a></li>
                                 <li><a href='/notes/expo'>Экспозиция и риск/доходность</a></li>
                         </ul>
