--- a/pages/sources.html
+++ b/pages/sources.html
@@ -82,7 +82,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/cardscalc#_7'>Использование и расчёт банковских карт/О веере карт и о халяве</a></li>
+                        <li><a href='/literacy/cardscalc#_7'>Использование и расчёт банковских карт/О веере карт и о халяве</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Использование и расчёт банковских карт/О веере карт и о халяве</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
@@ -230,7 +236,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/realty#_2'>Недвижимость/Арендная жилая недвижимость</a></li>
+                        <li><a href='/literacy/instruments/realty#_2'>Недвижимость/Арендная жилая недвижимость</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Недвижимость/Арендная жилая недвижимость</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details><a href="https://www.nber.org/papers/w24112" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
 <p>Исследование о реальных и номинальных доходностях основных классов доходных активов: акций, облигаций и недвижимости практически по всем странам мира.</p>
@@ -241,7 +253,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/zero_sum'>Рынок как игра с нулевой суммой</a></li>
+                        <li><a href='/literacy/zero_sum'>Рынок как игра с нулевой суммой</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Рынок как игра с нулевой суммой</span>
+        <span class='description'>Почему активные инвесторы и спекулянты отбирают деньги друг у друга, а пассивных невозможно победить</span>
+    </span></li>
             </ul>
         </details><a href="https://web.stanford.edu/~wfsharpe/art/active/active.htm" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
 <p>Уильям Шарп о том, что активные участники рынка не могут получить доходность за счёт пассивных. <a href="https://assetallocation.ru/arithmetic-of-active-management">Перевод на русский</a> от Сергея Спирина, <a href="/literacy/zero_sum">мой математический пересказ</a>
