--- a/calculators/bond_price.html
+++ b/calculators/bond_price.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/bonds_in_portfolio#_4'>Облигации в инвестиционном портфеле/Для извлечения дополнительной доходности во время кризисов</a></li>
+                        <li><a href='/notes/bonds_in_portfolio#_4'>Облигации в инвестиционном портфеле/Для извлечения дополнительной доходности во время кризисов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Облигации в инвестиционном портфеле/Для извлечения дополнительной доходности во время кризисов</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
