--- a/literacy/erratic_returns/index.html
+++ b/literacy/erratic_returns/index.html
@@ -72,6 +72,18 @@
 <section id="neg-asy">
 <h2><a href="/literacy/erratic_returns#neg-asy">Отрицательная асимметрия<i class=share>&#xe9cb;</i></a></h2>
 <div class="meta">
+<details>
+            <summary>Используется в:</summary>
+            <ul>
+                        <li><a href='/notes/paingain#_2'>Болезненность и полезность/Полезность</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Болезненность и полезность/Полезность</span>
+        <span class='description'></span>
+    </span></li>
+            </ul>
+        </details>
 </div>
 <p>Однако толстые хвосты — это всего лишь бо́льшая неопределённость. Хуже, что «структура» этой неопределённости тоже может быть неинтуитивна. Взять например то, что распределения доходностей всех инструментов более или менее асимметричны.</p>
 <p><img src="/literacy/erratic_returns/negasy.svg"></p>
@@ -109,7 +121,13 @@
         </div><details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/psych#_3'>Психология долгосрочных инвестиций/Ссылки по теме/Joe Wiggins. Why we don&#39;t invest for the long term</a></li>
+                        <li><a href='/literacy/psych#_3'>Психология долгосрочных инвестиций/Ссылки по теме/Joe Wiggins. Why we don&#39;t invest for the long term</a>    <button class='link-meta-anchor'>
+            <i class="share">&#xe901;</i>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Психология долгосрочных инвестиций/Ссылки по теме/Joe Wiggins. Why we don&#39;t invest for the long term</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details></div>
 <p>Пожалуй, самое скандальное свойство инвестиционных стратегий.</p>
@@ -139,8 +157,8 @@ s-225.272,467,-225.272,467s-235,486,-235,486c-2.7,4.7,-9,7,-19,7
 c-6,0,-10,-1,-12,-3s-194,-422,-194,-422s-65,47,-65,47z
 M834 80h400000v40h-400000z'/></svg></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.08390500000000001em;"><span></span></span></span></span></span><span class="mclose delimcenter" style="top:0em;"><span class="delimsizing size2">)</span></span></span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:1.3812309999999999em;"><span style="top:-3.6029em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.10903em;">N</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">≈</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.8913309999999999em;vertical-align:0em;"></span><span class="mord">0</span><span class="mord">.</span><span class="mord">9</span><span class="mord"><span class="mord">5</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8913309999999999em;"><span style="top:-3.113em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.10903em;">N</span></span></span></span></span></span></span></span><span class="mord">.</span></span></span></span></span></span>
 Т.е. <strong>в каждой партии</strong> вы будете проигрывать в среднем 5% капитала.</p>
-<div class="todo" id="zDSpy3l5qxc">
-<p><i class='share'><a href='/literacy/erratic_returns#zDSpy3l5qxc'>&#xe902;</a></i>Здесь проглядывает параллель с <a href="/notes/rebalance_bonus#drag">потерями на волатильности</a>
+<div class="todo" id="LeTIM7eQMQs">
+<p><i class='share'><a href='/literacy/erratic_returns#LeTIM7eQMQs'>&#xe902;</a></i>Здесь проглядывает параллель с <a href="/notes/rebalance_bonus#drag">потерями на волатильности</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
         <span class='link-meta'>
             <span class='header'>Бонус за ребалансировку и потери на волатильности (физмат-этюд)/Потери на волатильности</span>
