--- a/literacy/instruments/stocks.html
+++ b/literacy/instruments/stocks.html
@@ -50,7 +50,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/instruments/crypto'>Криптовалюты</a></li>
+                        <li><a href='/literacy/instruments/crypto'>Криптовалюты</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Криптовалюты</span>
+        <span class='description'>Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</span>
+    </span></li>
             </ul>
         </details>
 </div>
