--- a/literacy/notaboutmoney.html
+++ b/literacy/notaboutmoney.html
@@ -45,10 +45,34 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/capital'>Зачем нужен капитал</a></li>
-                        <li><a href='/literacy/cardscalc'>Использование и расчёт банковских карт</a></li>
-                        <li><a href='/literacy/cardscalc#_7'>Использование и расчёт банковских карт/О веере карт и о халяве</a></li>
-                        <li><a href='/literacy/howto'>Пенсия своими силами. Пошаговое руководство</a></li>
+                        <li><a href='/notes/capital'>Зачем нужен капитал</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Зачем нужен капитал</span>
+        <span class='description'>Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы.</span>
+    </span></li>
+                        <li><a href='/literacy/cardscalc'>Использование и расчёт банковских карт</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Использование и расчёт банковских карт</span>
+        <span class='description'>Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</span>
+    </span></li>
+                        <li><a href='/literacy/cardscalc#_7'>Использование и расчёт банковских карт/О веере карт и о халяве</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Использование и расчёт банковских карт/О веере карт и о халяве</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/howto'>Пенсия своими силами. Пошаговое руководство</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Пенсия своими силами. Пошаговое руководство</span>
+        <span class='description'>Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции.</span>
+    </span></li>
             </ul>
         </details>
 </div>
