--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -45,8 +45,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/system#_3'>Как организованы мои финансы/Открытие/Накопительный счёт</a></li>
-                        <li><a href='/literacy/howto#_3'>Пенсия своими силами. Пошаговое руководство/Воплощаем</a></li>
+                        <li><a href='/notes/system#_3'>Как организованы мои финансы/Открытие/Накопительный счёт</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Как организованы мои финансы/Открытие/Накопительный счёт</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/literacy/howto#_3'>Пенсия своими силами. Пошаговое руководство/Воплощаем</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Пенсия своими силами. Пошаговое руководство/Воплощаем</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
