--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -45,7 +45,13 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/literacy/reserves'>Формирование резервов</a></li>
+                        <li><a href='/literacy/reserves'>Формирование резервов</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Формирование резервов</span>
+        <span class='description'>Универсальный подход к управлению личными финансами, планированию и учёту расходов, составлению личного финансового плана и бюджета через работу с резервами. Виды и правила формирования резервов. Как оценить выгоду от страхового полиса. Что выгоднее: страховка или резерв? Как правильно копить на пенсию. Почему полисы инвестиционного и накопительного страхования (ИСЖ, НСЖ) невыгодны почти для всех.</span>
+    </span></li>
             </ul>
         </details>
 </div>
