--- a/notes/lifeprofile.html
+++ b/notes/lifeprofile.html
@@ -45,8 +45,20 @@
 <details>
             <summary>Используется в:</summary>
             <ul>
-                        <li><a href='/notes/fallacies#_3'>Порочные идеи/Живи пока молодой</a></li>
-                        <li><a href='/notes/fallacies#_4'>Порочные идеи/Нет смысла инвестировать мелкие суммы</a></li>
+                        <li><a href='/notes/fallacies#_3'>Порочные идеи/Живи пока молодой</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Порочные идеи/Живи пока молодой</span>
+        <span class='description'></span>
+    </span></li>
+                        <li><a href='/notes/fallacies#_4'>Порочные идеи/Нет смысла инвестировать мелкие суммы</a>    <button class='link-meta-anchor'>
+            <strong>i</strong>
+    </button>
+    <span class='link-meta'>
+        <span class='header'>Порочные идеи/Нет смысла инвестировать мелкие суммы</span>
+        <span class='description'></span>
+    </span></li>
             </ul>
         </details>
 </div>
